force-app/main/default/objects/Political_Relationship__c/Political_Relationship__c.object-meta.xml
<CustomObject>
    <description>Stores information related to EDF contacts knowledge of key political figures.</description>
    <label>Political Relationship</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Political Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Political Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>