force-app/main/default/objects/Political_Relationship__c/fields/EDF_Contact_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>EDF_Contact_Relationship_Manager__c</fullName>
    <formula>EDF_Contact__r.Primary_Handler__r.FirstName + &quot; &quot; + EDF_Contact__r.Primary_Handler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EDF Contact Relationship Manager</label>
    <type>Text</type>
</CustomField>