force-app/main/default/objects/Political_Relationship__c/fields/EDF_Relationship_Context__c.field-meta.xml
<CustomField>
    <fullName>EDF_Relationship_Context__c</fullName>
    <description>Use this field to share non-donation information including anecdotal relationship context or public information from articles.</description>
    <inlineHelpText>Use this field to share non-donation information including anecdotal relationship context or public information from articles.</inlineHelpText>
    <label>EDF Relationship Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>