force-app/main/default/objects/Political_Relationship__c/fields/Is_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Is_Constituent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this person a constituent of the public figure?</description>
    <inlineHelpText>Is this person a constituent of the public figure. If second home, please note in “EDF Relationship Context” field.</inlineHelpText>
    <label>Is Constituent</label>
    <type>Checkbox</type>
</CustomField>