force-app/main/default/objects/Political_Relationship__c/fields/Last_Verified__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified__c</fullName>
    <description>Date this information was last confirmed</description>
    <inlineHelpText>What was the last day this information was verified/updated?</inlineHelpText>
    <label>Last Verified</label>
    <required>true</required>
    <type>Date</type>
</CustomField>