force-app/main/default/objects/Political_Relationship__c/fields/Public_Figure__c.field-meta.xml
<CustomField>
    <fullName>Public_Figure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of person who holds/held public office or other public figure</description>
    <inlineHelpText>Name of person who holds/held public office or other public figure.</inlineHelpText>
    <label>Public Figure</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Political Relationships (Public Figure)</relationshipLabel>
    <relationshipName>Political_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>